# mlflow-go

./: .bazeliskrc  .gitignore  .golangci.yaml  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bzlmod  artifact_repo_test.go  codecov.yml  dbfs_artifact_repo.go  dbfs_artifact_repo_test.go  file_artifact_repo.go  file_experiment.go  file_run.go  file_store.go  file_test.go  go.mod  interface.go  interface_test.go  python_requirements_lock.txt  rest_store.go  rest_store_test.go  update_protos.sh
.github/workflows/: check.yml  ci.bazelrc
conformance/: BUILD.bazel  README.md  conformance_test.py  gunicorn_exe.py  main.go  main.py
protos/: BUILD.bazel  README.md  databricks.pb.go  databricks_artifacts.pb.go  facet_feature_statistics.pb.go  internal.pb.go  model_registry.pb.go  scalapb.pb.go  service.pb.go
tools/: add_python_dep.sh  update_protos.sh
