load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mlflow",
    srcs = [
        "dbfs_artifact_repo.go",
        "file_artifact_repo.go",
        "file_experiment.go",
        "file_run.go",
        "file_store.go",
        "interface.go",
        "rest_store.go",
    ],
    importpath = "github.com/Astera-org/mlflow-go",
    visibility = ["//visibility:public"],
    deps = [
        "//protos:protos_go_pregen",
        "@com_github_google_uuid//:uuid",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "mlflow_test",
    timeout = "short",
    srcs = [
        "file_test.go",
        "interface_test.go",
        "rest_store_test.go",
    ],
    embed = [":mlflow"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "artifact_repo_test",
    timeout = "short",
    srcs = ["artifact_repo_test.go"],
    embed = [":mlflow"],
    gotags = ["manual"],
    tags = ["manual"],
)
