load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "go",
    srcs = ["main.go"],
    deps = ["//:mlflow"],
)

py_binary(
    name = "py",
    srcs = ["main.py"],
    main = "main.py",
    deps = ["@pip//mlflow:pkg"],
)

# conformance_test starts MLFlow server, which runs gunicorn, which imports
# mlflow. This is a gunicorn executable that has access to mlflow.
py_binary(
    name = "gunicorn",
    srcs = ["gunicorn_exe.py"],
    main = "gunicorn_exe.py",
    deps = [
        "@pip//gunicorn:pkg",
        "@pip//mlflow:pkg",
    ],
)

py_test(
    name = "conformance_test",
    timeout = "short",
    srcs = ["conformance_test.py"],
    data = [
        ":go",
        ":gunicorn",
        ":py",
    ],
    deps = [
        "@pip//mlflow:pkg",
        "@pip//requests:pkg",
        "@rules_python//python/runfiles",
    ],
)
